--- a/MyTiKi/app/src/main/res/layout/fragment_category_detail.xml
+++ b/MyTiKi/app/src/main/res/layout/fragment_category_detail.xml
@@ -31,7 +31,9 @@
             android:id="@+id/ivcategory"
             imageFromUrl="@{category.image}"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:adjustViewBounds="true"
+            app:layout_constraintDimensionRatio="1:1"
+            android:layout_height="0dp"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
