--- a/MyTiKi/app/src/main/res/layout/home_fragment.xml
+++ b/MyTiKi/app/src/main/res/layout/home_fragment.xml
@@ -136,6 +136,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:orientation="horizontal"
                     tools:itemCount="1"
                     tools:listitem="@layout/item_product_sale" />
@@ -188,6 +189,7 @@
                 <!--recyclerview product sale-->
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_product_viewed"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
@@ -243,6 +245,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_category_home"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -292,7 +295,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
