--- a/MyTiKi/app/src/main/res/layout/activity_product_of_category.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_product_of_category.xml
@@ -16,14 +16,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/btn_cancel_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="@dimen/default_margin"
             android:linksClickable="true"
             android:onClick="onClickQuiteCategory"
-            android:padding="16dp"
+            android:paddingStart="5dp"
+            android:paddingTop="@dimen/padding10"
+            android:paddingEnd="5dp"
+            android:paddingBottom="@dimen/padding10"
             android:tint="@color/colorWhiteBG"
             app:srcCompat="@drawable/ic_left_arrow" />
 
@@ -39,14 +42,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/edit_seach_bg"
-                android:drawableStart="@drawable/ic_search"
                 android:drawablePadding="10dp"
                 android:ellipsize="end"
                 android:padding="8dp"
                 android:singleLine="true"
-                android:textColor="@color/colorTextHint"
-                android:textSize="16sp" />
+                android:textColor="@color/colorWhite"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="test" />
 
             <include layout="@layout/ll_cart" />
 
@@ -69,7 +72,7 @@
 
             <!--Adapter-->
             <RelativeLayout
-                android:id="@+id/rl_adapter"
+                android:id="@+id/rlSlide"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -112,7 +115,7 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rl_adapter" />
+                app:layout_constraintTop_toBottomOf="@id/rlSlide" />
 
             <TextView
                 android:id="@+id/tv_viewmore_product_sale_category"
@@ -135,8 +138,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="16dp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_salse"
@@ -177,9 +180,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_marginBottom="16dp"
                 android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_best_sale"
@@ -232,6 +235,42 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_search_product_category" />
 
+
+    <LinearLayout
+        android:id="@+id/llProductEmpty"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@color/colorWhiteBG"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_search_product_category">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:srcCompat="@drawable/no_voucher" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="@string/product_list_is_empty"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btnContinueShoppingProduct"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/bg_rounded_corner_red"
+            android:text="@string/continue_shopping"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
 
     <include
         layout="@layout/loading_layout"
