--- a/MyTiKi/app/src/main/res/layout/activity_splash.xml
+++ b/MyTiKi/app/src/main/res/layout/activity_splash.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent"
     android:background="@color/colorWhiteBG">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/ivLogo"
-        android:layout_width="0dp"
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_logo_splash"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.8" />
+        app:lottie_rawRes="@raw/shopping"
+        app:lottie_autoPlay="true" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
