--- a/MyTiKi/app/src/main/res/layout/fragment_sign_in_and_sing_up.xml
+++ b/MyTiKi/app/src/main/res/layout/fragment_sign_in_and_sing_up.xml
@@ -15,23 +15,25 @@
         android:background="@color/colorWhite"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="0dp"
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:src="@drawable/shopping"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintWidth_percent="0.8" />
+            app:lottie_rawRes="@raw/shop"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true" />
 
         <Button
             android:id="@+id/btnSignUp"
             style="@style/Button.CircleCorner"
+            android:layout_margin="@dimen/default_margin"
             android:onClick="@{() -> fragment.onClickShowSignUpFragment()}"
             android:text="@string/sign_up"
-            android:layout_margin="@dimen/default_margin"
             app:layout_constraintBottom_toTopOf="@id/btnSignIn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
